linked css and js files to index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Lab: Pixel Art Maker</h1>
@@ -23,6 +23,6 @@
     <h2>Design Canvas</h2>
     <table id="pixel_canvas"></table>
 
-    <script src="designs.js"></script>
+    <script src="js/designs.js"></script>
 </body>
 </html>
