added grid building functionality

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h2>Choose Grid Size</h2>
     <form id="sizePicker">
         Grid Height:
-        <input type="number" id="input_height" name="height" min="1" value="1">
+        <input type="number" id="input_height" name="height" min="1" value="8">
         Grid Width:
-        <input type="number" id="input_width" name="width" min="1" value="1">
-        <input type="submit">
+        <input type="number" id="input_width" name="width" min="1" value="8">
+        <input id="submitGrid" type="submit">
     </form>
 
     <h2>Pick A Color</h2>
@@ -23,6 +23,10 @@
     <h2>Design Canvas</h2>
     <table id="pixel_canvas"></table>
 
+    <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
     <script src="js/designs.js"></script>
 </body>
 </html>
