added reset canvas button

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <h2>Choose Grid Size</h2>
     <form id="sizePicker">
         Grid Height:
-        <input type="number" id="input_height" name="height" min="1" value="8">
+        <input type="number" id="input_height" name="height" min="1" value="16">
         Grid Width:
-        <input type="number" id="input_width" name="width" min="1" value="8">
-        <input id="submitGrid" type="submit">
+        <input type="number" id="input_width" name="width" min="1" value="16">
+        <button id="reset" type="button">Reset</button>
+        <input id="submitGrid" type="submit" value="Create Canvas!">
     </form>
 
     <h2>Pick A Color</h2>
