--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         Grid Width:
         <input type="number" id="input_width" name="width" min="1" value="16">
         <button id="reset" type="button">Reset</button>
-        <input id="submitGrid" type="submit" value="Create Canvas!">
+        <input id="submitGrid" type="submit" value="Create Canvas!"> <br /> <br />
+        Brush Size:
+        <input type="number" id="brush_Size" name="brush" min="1" max="3" value="1">
+        <button id="toggleGrid" type="button">Toggle Grid</button>
     </form>
 
     <h2>Pick A Color</h2>
