added fonts, began redesign, fixed painting bug

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <h1>Lab: Pixel Art Maker</h1>
+<body> 
+    <header class="main-header">
+        <img src="media/logo.png" alt="Pixel Maker Logo">
+    </header>
 
-    <h2>Choose Grid Size</h2>
+    <h2>CREATE GRID CANVAS</h2>
     <form id="sizePicker">
         Grid Height:
         <input type="number" id="input_height" name="height" min="1" value="16">
@@ -24,7 +26,7 @@
     <h2>Pick A Color</h2>
     <input type="color" id="colorPicker">
 
-    <h2>Design Canvas</h2>
+    <h2>CREATE GRID CAN</h2>
     <table id="pixel_canvas"></table>
 
     <script
