--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
                 <div class="paint-controls">
                     <h2>PAINT CONTROLS</h2>
                     <p>BRUSH SIZE:</p>
-                    <input type="number" id="brush_Size" name="brush" min="1" max="3" value="1">
+                    <!-- <input type="number" id="brush_Size" name="brush" min="1" max="3" value="1"> -->
+                    <select id="brush_Size">
+                        <option class="brush-size" value="1">1</option>
+                        <option class="brush-size" value="2">2</option>
+                        <option class="brush-size" value="3">3</option>
+                    </select>
                     <div class="grid-buttons">
                         <button id="toggleGrid" type="button">TOGGLE GRID</button>
                         <button id="reset" type="button">RESET GRID</button><br />
