added background color picker during grid creation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                     <input type="number" id="input_height" name="height" min="1" value="32"> <br />
                     <p>GRID WIDTH:</p>
                     <input type="number" id="input_width" name="width" min="1" value="32"><br />
+                    <p>SET BACKGROUND COLOR:</p>
+                    <input type="color" id="backgroundPicker">
                     <input id="submitGrid" type="submit" value="INITIALIZE GRID">
                 </div>
 
