updated reset function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 <div class="paint-controls">
                     <h2>PAINT CONTROLS</h2>
                     <p>BRUSH SIZE:</p>
-                    <!-- <input type="number" id="brush_Size" name="brush" min="1" max="3" value="1"> -->
                     <select id="brush_Size">
                         <option class="brush-size" value="1">1</option>
                         <option class="brush-size" value="2">2</option>
@@ -35,7 +34,7 @@
                     </select>
                     <div class="grid-buttons">
                         <button id="toggleGrid" type="button">TOGGLE GRID</button>
-                        <button id="reset" type="button">RESET GRID</button><br />
+                        <button id="reset" type="button">RESET GRID</button>
                     </div>
                     <p>COLOR PICKER:</p>
                     <input type="color" id="colorPicker">
@@ -45,13 +44,11 @@
             <div class="controls-list">
                 <h2>CONTROLS</h2>
                 <p>CLICK AND DRAG TO PAINT</p>
-                <p>THREE BRUSH SIZES</p>
                 <br />
                 <p>PAINT : <span>LEFT-CLICK</span></p>
                 <p>ERASE : <span>SHIFT + LEFT-CLICK</span></p>
                 <p>EYEDROPPER : <span>CTRL + LEFT-CLICK</span></p>
             </div>
-
         </div>
 
         <div class="canvas-wrapper">
