added ability to paint without dragging(repeated object)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>Pixel Art Maker!</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body> 
@@ -34,7 +33,7 @@
                     </select>
                     <div class="grid-buttons">
                         <button id="toggleGrid" type="button">TOGGLE GRID</button>
-                        <button id="reset" type="button">RESET GRID</button>
+                        <button id="reset" type="button">CLEAR CANVAS</button>
                     </div>
                     <p>COLOR PICKER:</p>
                     <input type="color" id="colorPicker">
