eraser now scales with brush sizes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <br />
                 <p>PAINT : <span>LEFT-CLICK</span></p>
                 <p>ERASE : <span>SHIFT + LEFT-CLICK</span></p>
-                <p>EYEDROPPER : <span>CTRL + LEFT-CLICK</span></p>
+                <p>EYEDROPPER : <span>CTRL/CMD + LEFT-CLICK</span></p>
             </div>
         </div>
 
