optimised paint function / disabled rightclick

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="canvas-wrapper">
-            <table id="pixel_canvas"></table>
+            <table id="pixel_canvas" oncontextmenu="return false;"></table>
         </div>
     </div>
 
