adjusted controls text

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
             <div class="controls-list">
                 <h2>CONTROLS</h2>
-                <p>CLICK AND DRAG TO PAINT</p>
+                <p>PAINT : <br /><span>LEFT/RIGHT-CLICK</span></p>
+                <p>ERASE : <br /><span>SHIFT + LEFT/RIGHT-CLICK</span></p>
+                <p>EYEDROPPER : <br /><span>CTRL/CMD + LEFT/RIGHT-CLICK</span></p>
                 <br />
-                <p>PAINT : <span>LEFT-CLICK</span></p>
-                <p>ERASE : <span>SHIFT + LEFT-CLICK</span></p>
-                <p>EYEDROPPER : <span>CTRL/CMD + LEFT-CLICK</span></p>
+                <p>CLICK AND DRAG TO PAINT</p>
             </div>
         </div>
 
